[package]
authors = ["Antoni Zasada"]
description = "Visualize music on your Nanoleaf Canvas"
keywords = ["nanoleaf", "music", "visualizer", "mpd"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/azasada/audioleaf"
name = "audioleaf"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.5.0"
dirs = "5.0.1"
expanduser = "1.2.2"
num = "0.4.3"
palette = "0.7.6"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
toml = "0.8.19"
url = "2.5.2"
