[package]
name = "audioleaf"
version = "2.1.0"
edition = "2021"
authors = ["Antoni Zasada"]
description = "Visualize music on your Nanoleaf Canvas"
keywords = ["nanoleaf", "audio", "music", "visualizer"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alfazet/audioleaf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
console = "0.15.8"
cpal = "0.15.3"
dirs = "5.0.1"
palette = "0.7.6"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
rustfft = "6.2.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
toml = "0.8.19"
url = "2.5.2"
